--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main class="container">
         <header class="cabecalho">
-          <img id="logo" src="/imagens/Vector.png" alt="logo">
+          <img id="logo" src="./imagens/Vector.png" alt="logo">
 
         </header>
         <div class="container-input">
